# spy

./: Cargo.toml  dhat-entry-fetch-latest.json  dhat-entry-fetch.json  dhat-heap.json  flake.nix
benches/: template_render.rs
benches/fixtures/: entry.json  render_full.j2
nix/checks/: default.nix
nix/pkgs/: default.nix
nix/pkgs/kani/: default.nix
nix/pkgs/spy/: default.nix
nix/shell/: default.nix
src/: main.rs
src/lib/: cli.rs  entry.rs  mod.rs  tag.rs  template.rs
