[package]
name = "bm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
color-eyre = "0.6.5"
once_cell = "1.21.3"
readability = "0.3.0"
regex = "1.11.2"
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
ureq = "3.1.2" 
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[lib]
name = "libbm"
path = "src/lib/mod.rs"

[[bin]]
name = "bm"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "debuginfo"
